correction des erreurs de contrast sur la page d'accueil

--- a/style.css
+++ b/style.css
@@ -772,15 +772,18 @@ h4 {
 
 .bgc-atomic-tangerine {
     background-color: #F3976C;
+    filter:contrast(150%),
 }
 
 .tc-white {
     color: #F3976C!important;
+    filter:contrast(150%),
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
+    filter:contrast(150%);
 }
 
 .btn-atomic-tangerine:hover {
